# kafka_project

./: docker-compose.yml
consumer_service/: Dockerfile  pyproject.toml
consumer_service/consumer/management/commands/: consumer.py
consumer_service/consumer/migrations/: 0001_initial.py
consumer_service/consumer_service/: asgi.py  settings.py  urls.py  wsgi.py
producer_service/: Dockerfile  manage.py  pyproject.toml
producer_service/api/: serializers.py  urls.py  views.py
producer_service/producer_service/: asgi.py  settings.py  urls.py  wsgi.py
